# NLC_SUMMER_2026

./: .gitignore  260715_ee_j2.cpp  260715_plot  260715_plot.cpp  260715eej2  260715ek  260715ek.cpp  260722_ccoord_test.cpp  260722_coord_test.cpp  260722_coordiante_test.cpp  260722_port_finder_test.cpp  260722ct  260722ek  260722ek.cpp  260723ccoord_t  260723ct  2pft  CMakeLists.txt  ImuSensor.hpp  ImuSensor_h_old.hpp  MyCobotDirect.hpp  calibrate  calibrate.cpp  calibration_precise  calibration_precise.cpp  ccoord_t  coordiante_t  debug_imu  debug_imu.cpp  direct_test  direct_test.cpp  imu_s_test  imu_sesnor_test.cpp  locate_wrist_imu.cpp  lwi  noapi  noapi2  noapi3  noapi3.cpp  port_discovery.hpp  (+12 more)
